--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ Main: #3D5D5F
 Light: #ebeeef
 White: f0f5f4
 -------------------------------------------------------------------*/
-
+webkit-appearance: none;
 /*//////////////////////////////////////////////////////////////////
 [ FONT ]*/
 
